--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+appnope==0.1.3
 asgiref==3.5.2
+asttokens==2.0.7
+backcall==0.2.0
 cachetools==5.2.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
-Django==4.0.6
+decorator==5.1.1
+Django==4.1
+django-environ==0.9.0
 django-mathfilters==1.0.0
 django-photologue==3.15.1
 django-sortedm2m==3.1.1
 django-taggit==3.0.0
 django-widget-tweaks==1.4.12
+executing==0.9.1
 ExifRead==3.0.0
 google-api-core==2.8.2
 google-api-python-client==2.56.0
@@ -17,11 +23,21 @@ google-auth-oauthlib==0.5.2
 googleapis-common-protos==1.56.4
 httplib2==0.20.4
 idna==3.3
+ipython==8.4.0
+jedi==0.18.1
+matplotlib-inline==0.1.3
 oauthlib==3.2.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.2.0
+prompt-toolkit==3.0.30
 protobuf==4.21.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+Pygments==2.12.0
 pyparsing==3.0.9
 python-decouple==3.6
 pytz==2022.1
@@ -30,5 +46,8 @@ requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
 sqlparse==0.4.2
+stack-data==0.3.0
+traitlets==5.3.0
 uritemplate==4.1.1
 urllib3==1.26.11
+wcwidth==0.2.5
