--- a/teensconnect-website.json.TEMPLATE
+++ b/teensconnect-website.json.TEMPLATE
@@ -1,8 +1,8 @@
 {
   "type": "service_account",
   "project_id": "teensconnect-website",
-  "private_key_id": "<keyid>",
-  "private_key": "<priviate_key>",
+  "private_key_id": "<private_key_id>",
+  "private_key": "<private_key>",
   "client_email": "<client_email>",
   "client_id": "<client_id>",
   "auth_uri": "https://accounts.google.com/o/oauth2/auth",
